<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true"
    android:background="lig"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout_mainActivity1"
    >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.25"
            />

        <ImageView
            android:id="@+id/image_logolink_logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image_android_development"
            android:contentDescription="@string/logoDescription"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_25"
        />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/btn_group_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_continue, btn_levels, btn_settings"
            />

        <!--  Continue button  /-->
        <Button

            android:id="@+id/btn_continue"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/btn_continue"


            app:layout_constraintBottom_toTopOf="@+id/btn_levels"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logolink_logo" />

        <!--  Levels button  /-->
        <Button
            android:id="@+id/btn_levels"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/btn_levels"

            app:layout_constraintTop_toBottomOf="@+id/btn_continue"
            app:layout_constraintBottom_toTopOf="@+id/btn_settings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!--  Profiles button  /-->
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/btn_settings"

            app:layout_constraintTop_toBottomOf="@+id/btn_levels"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>