<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/popupoverbox">

    <ImageView
        android:id="@+id/popupoverbox_box_levelComplete"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:background="@drawable/popupoverbox_background"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/popupoverbox_boxTitle_levelComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_arcadeclassic"
        android:textSize="42dp"
        android:text="@string/level_complete"

        app:layout_constraintTop_toTopOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintLeft_toLeftOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintRight_toRightOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintBottom_toTopOf="@+id/popupoverbox_box_continue_btn"
        />

    <ImageButton
        android:id="@+id/popupoverbox_box_continue_btn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/custom_button"

        app:layout_constraintTop_toTopOf="@+id/popupoverbox_boxTitle_levelComplete"
        app:layout_constraintLeft_toLeftOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintRight_toRightOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintBottom_toTopOf="@+id/popupoverbox_box_exit_btn"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_arcadeclassic"
            android:text="@string/btn_continue"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="end"
            android:layout_marginLeft="75dp"

            app:layout_constraintTop_toTopOf="@id/popupoverbox_box_continue_btn"
            app:layout_constraintLeft_toLeftOf="@id/popupoverbox_box_continue_btn"
            app:layout_constraintRight_toRightOf="@id/popupoverbox_box_continue_btn"
            app:layout_constraintBottom_toBottomOf="@id/popupoverbox_box_continue_btn"
            />

    <ImageButton
        android:id="@+id/popupoverbox_box_exit_btn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/custom_button"

        app:layout_constraintTop_toBottomOf="@+id/popupoverbox_box_continue_btn"
        app:layout_constraintLeft_toLeftOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintRight_toRightOf="@+id/popupoverbox_box_levelComplete"
        app:layout_constraintBottom_toBottomOf="@+id/popupoverbox_box_levelComplete"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_arcadeclassic"
            android:text="@string/btn_exit"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="end"
            android:layout_marginLeft="75dp"

            app:layout_constraintTop_toTopOf="@id/popupoverbox_box_exit_btn"
            app:layout_constraintLeft_toLeftOf="@id/popupoverbox_box_exit_btn"
            app:layout_constraintRight_toRightOf="@id/popupoverbox_box_exit_btn"
            app:layout_constraintBottom_toBottomOf="@id/popupoverbox_box_exit_btn"
            />

</androidx.constraintlayout.widget.ConstraintLayout>